--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,78 @@
     border-image: linear-gradient(to right, #31d35c, #2bb7da);
     border-image-slice: 1;
 }
+
+.bg-header {
+    background: url('/public/bg-intro-desktop.svg');
+}
+
+.mockup-img{
+    position: absolute;
+}
+
+
+/* xl: 1536px and up */
+@media (min-width: 1536px) {
+    .bg-header {
+        background-size: 1000px 1000px;
+        background-position: 400px -145px !important;
+    }
+    .mockup-img{
+        object-fit: scale-down;
+        object-position: 520px 100px;
+    }
+}
+
+/* lg: 1280px to 1535px */
+@media (min-width: 1280px) and (max-width: 1535px) {
+    .bg-header {
+        background-size: 1000px 1000px;
+        background-position: 400px -145px !important;
+    }
+    .mockup-img{
+        object-fit: scale-down;
+        object-position: 400px 100px;
+    }
+}
+
+/* md: 1024px to 1279px */
+@media (min-width: 1024px) and (max-width: 1279px) {
+    .bg-header {
+        background-size: 1000px 1000px;
+        background-position: 280px -145px !important;
+    }
+    .mockup-img{
+        object-fit: scale-down;
+        object-position: 290px 100px;
+    }
+}
+
+/* sm: 768px to 1023px */
+@media (min-width: 768px) and (max-width: 1023px) {
+    .bg-header {
+        background-size: 1000px 1000px;
+        background-position: 160px -145px !important;
+    }
+    .mockup-img{
+        object-fit: scale-down;
+        object-position: 290px 100px;
+    }
+}
+
+/* xs: less than 768px */
+@media (min-width: 640px) and (max-width: 768px) {
+    .bg-header {
+        background: url('/public/bg-intro-mobile.svg'); /* Cambia el fondo aquí */
+        background-size: cover;
+        background-position: 0px -300px !important;
+        background-repeat: no-repeat;
+    }
+}
+@media (max-width: 639px) {
+    .bg-header {
+        background: url('/public/bg-intro-mobile.svg'); /* Cambia el fondo aquí */
+        background-size: cover;
+        background-position: 0px -50px !important;
+        background-repeat: no-repeat;
+    }
+}
